update bin files